assets/css/styles-index.css
:root {
	--timeline-year-colour: #0C7E3B;

	--timeline-thickness: 1px;
	--timeline-even-shift: -1px;	/* to avoid thicker line where top & bottom cells overlap */
	--timeline-colour: #a6a7b5;
	--callout-line-thickness: 1px;
	--callout-line-colour: #41a82c;

	--std-padding: 0.25rem;

	/* horz timeline
	   ------------- */
	--timeline-grid-auto-flow: column;

	--callout-line-border-left: dashed;

	--timeline-line-border-top: solid;
	--timeline-line-border-bottom: solid;

	--cell-grid-column: span 2;
	--cell-child-grid-column: span 3;

	--cell-padding_size: 1rem;
	--cell-padding: 0 var(--cell-padding_size);

	--content-shift-positive: calc(var(--std-padding) + var(--cell-padding_size));
	--content-shift: calc(var(--content-shift-positive) * -1);

	--cell-flex-dir: row;

	--cell-justify-items: end;

	/* time above detail */
	--cell-content-flex-direction: column;

	/* vert timeline
	   ------------- */
	--callout-line-border-bottom: none;

	--timeline-line-border-left: none;
	--timeline-line-border-right: none;

	--cell-grid-row: auto;
	--cell-child-grid-row: auto;

	/* time tick
	   --------- */
    --timetick-height: 0.5rem;
	--timetick-width: 0.5rem;
	--timetick-border: 0.25rem;

	--timetick-horz-shift-positive: calc(var(--timetick-width) + var(--cell-padding_size));
	--timetick-horz-shift: calc(var(--timetick-horz-shift-positive) * -1);
	--timetick-vert-shift: calc(var(--timetick-height) * -1);
	--timetick-centre-colour: white;

	--timetick-even-vert-shift-positive: calc(var(--timetick-height) + var(--timeline-even-shift) + var(--timeline-thickness));
	--timetick-even-vert-shift: calc(var(--timetick-even-vert-shift-positive) * -1);

	--timetick-odd-vert-shift-positive: calc(var(--timetick-height) + var(--cell-padding_size));
	--timetick-odd-vert-shift: calc(var(--timetick-odd-vert-shift-positive) * -1);

	/* youtube embed width="560" height="315" */
	--video-aspect-ratio: calc(315 / 560);
	--video-width: var(--content-half-width);
	--video-height: calc(var(--video-width) * var(--video-aspect-ratio));
}

/* origins */

#origins-video-right {	
	float: right; 
	width: var(--video-width);
	height: var(--video-height); 
}
#origins-video-bottom {
	display: none;
	width: var(--video-width);
	height: var(--video-height); 
}

/* timeline based on https://codepen.io/joemaffei/pen/WNQKyPo from https://stackoverflow.com/a/61781360
	"Using a CSS grid with 2 rows, each segment of the timeline can be defined to be 2 columns wide. 
	 Making the 2nd segment 3 columns wide instantly gives you a staggered layout."
*/
 #timeline {
	 letter-spacing: 0.03em;
	 display: flex;
	 align-items: end;
	 justify-content: center;
}
dl {
	/* https://developer.mozilla.org/en-US/docs/Web/CSS/grid-column */
	display: grid;

	/* https://developers.google.com/codelabs/devtools-debug-css-grid#0 */

	grid-auto-columns: max-content;
	grid-auto-rows: max-content;
	grid-auto-flow: var(--timeline-grid-auto-flow);
	grid-template-rows: auto auto;
	grid-template-columns: auto auto;
	justify-items: var(--cell-justify-items);
}
dl .cell {
	/* https://developer.mozilla.org/en-US/docs/Web/CSS/grid-column
		set each element to 2 columns wide */
	grid-row: var(--cell-grid-row);
	grid-column: var(--cell-grid-column);
	display: flex;
	flex-direction: var(--cell-flex-dir);
	padding: var(--cell-padding);
}
 dl .cell:nth-child(2) {
	/* Set the second element in a list to 3 columns */
	grid-row: var(--cell-child-grid-row);
	grid-column: var(--cell-child-grid-column);
	justify-content: flex-end;
}
dl .cell {
	/* callout line from timeline marking content */
	display: inline-flex;
	flex-direction: var(--cell-content-flex-direction);

	/* active for horz timeline */
	border-left-width: var(--callout-line-thickness);
	border-left-style: var(--callout-line-border-left);
	border-left-color: var(--callout-line-colour);
	/* active for vert timeline */
	border-bottom-width: var(--callout-line-thickness);
	border-bottom-style: var(--callout-line-border-bottom);
	border-bottom-color: var(--callout-line-colour);
}

dl .cell::after {
	/* time tick on line: donut */
	content: '';
	display: block;
	height: var(--timetick-height);
	width: var(--timetick-width);

	border: var(--timetick-border) solid var(--callout-line-colour);
	background-color: var(--timetick-centre-colour);
	border-radius: 50%;
}

dl .cell dt {
	/* shift left, body background colour to cover callout line */
	background-color: var(--background-colour);
	position: relative;
	left: var(--content-shift);

	color: var(--timeline-year-colour);
	padding: 0 0 var(--std-padding) var(--std-padding);
	text-transform: uppercase;
	font-size: 0.8rem;
	font-weight: 600;
}

dl .cell dd {
	/* shift left, body background colour to cover callout line */
	background-color: var(--background-colour);
	position: relative;
	left: var(--content-shift);
    flex-grow: 1;
	
	padding: 0 0 var(--std-padding) var(--std-padding);
	color: var(--secondary-text);
	font-size: 0.8rem;
}

dl .cell:nth-child(odd) {
	/* top/right cells part of timeline */
	padding-bottom: 1rem;

	justify-content: end;

	/* active for horz timeline */
	border-bottom-width: var(--timeline-thickness);
	border-bottom-style: var(--timeline-line-border-bottom);
	border-bottom-color: var(--timeline-colour);
}
dl .cell:nth-child(odd)::after {
	bottom: var(--timetick-vert-shift);
}
dl .cell:nth-child(odd) dd:last-child {
	padding-bottom: 0.5rem;
}
dl .cell:nth-child(even) {
	/* bottom/left cells part of timeline */
	padding-top: 1rem;
	position: relative;
	/* to avoid thicker line where top & bottom cells overlap */
	top: var(--timeline-even-shift);
	 
	/* active for horz timeline */
	border-top-width: var(--timeline-thickness);
	border-top-style: var(--timeline-line-border-top);
	border-top-color: var(--timeline-colour);
}
dl .cell:nth-child(even)::after {
	 top: var(--timetick-vert-shift);
}
dl .cell:nth-child(even) dt {
	 padding-top: 0.5rem;
}
dl .cell:nth-child(even) dd {
	 flex-grow: 1;
}
dl .cell:last-child {
	 border-top-color: transparent;
	 border-bottom-color: transparent;
}
   
.embed-container { 
	padding-left: var(--std-padding-horz);
	padding-bottom: var(--std-padding-vert); 
	overflow: hidden; 
	max-width: 100%; 
} 
/* YouTube video */
/* https://embedresponsively.com/ */
.embed-container iframe, .embed-container object, .embed-container embed { 
	position: absolute; 
	top: 0; 
	left: 0; 
	width: 100%; 
	height: 100%; 
}

/* media queries */

/* other than small-medium screens, 800px wide or less */ 
@media not screen and (max-width: 800px) {

	dl .cell:nth-child(even)::after {
		/* time tick on line: donut */
		position: absolute;
		left: calc(var(--timetick-width) * -1);
		top: var(--timetick-even-vert-shift);
	}
	
	dl .cell:nth-child(odd)::after {
		/* time tick on line: donut */
		position: relative;
		left: var(--timetick-horz-shift);
		bottom: var(--timetick-odd-vert-shift);
	}
}


/* small-medium screens, 800px wide or less */ 
@media screen and (max-width: 800px) {

	:root {

		--timeline-grid-auto-flow: row;

		/* horz timeline
		   ------------- */
		--cell-grid-column: auto;
		--cell-child-grid-column: auto;

		--callout-line-border-left: none;

		--timeline-line-border-top: none;
		--timeline-line-border-bottom: none;
   
		/* vert timeline
		------------- */
		--cell-padding: var(--cell-padding_size) 0;

		--cell-flex-dir: column;

		--cell-grid-row: span 2;
		--cell-child-grid-row: span 3;

		--cell-justify-items: legacy;

		--content-shift: auto;

		--callout-line-border-bottom: dashed;

		--timeline-line-border-left: solid;
		--timeline-line-border-right: solid;
	}

	/* don't display every third <br> */
	dl .cell dd br:nth-child(3n) {
		display: none;
	}

	dl .cell::after {
		/* time tick on line: donut */
		position: relative;
	}
	dl .cell:nth-child(odd) {
		/* right cell's part of timeline */
		/* active for vert timeline */
		border-right-width: var(--timeline-thickness);
		border-right-style: var(--timeline-line-border-right);
		border-right-color: var(--timeline-colour);

		/* restore callout cleared in previous nth-child(odd) selector */
		border-bottom-width: var(--callout-line-thickness);
		border-bottom-style: var(--callout-line-border-bottom);
		border-bottom-color: var(--callout-line-colour);

		padding-right: var(--cell-padding_size);
	}
	dl .cell:nth-child(even) {
		/* left cell's part of timeline */
		position: relative;
		/* to avoid thicker line where top & bottom cells overlap */
		left: var(--timeline-even-shift);

		/* active for vert timeline */
		border-left-width: var(--timeline-thickness);
		border-left-style: var(--timeline-line-border-left);
		border-left-color: var(--timeline-colour);

		padding-left: var(--cell-padding_size);
	}
	dl .cell:nth-child(odd)::after {
		/* time tick on line: donut */
		right: calc(-100% - var(--timetick-horz-shift) - var(--cell-padding_size) - var(--cell-padding_size));
		bottom: calc(var(--timetick-vert-shift) - var(--cell-padding_size));
	}
	dl .cell:nth-child(even)::after {
		/* time tick on line: donut */
		left: var(--timetick-horz-shift);
		top: calc(var(--timetick-vert-shift) + var(--cell-padding_size) + var(--cell-padding_size));
	}

	dl .cell:last-child {
		border-bottom-color: var(--callout-line-colour);
   }
}


/* small-medium screens, 600px wide or less */ 
@media screen and (max-width: 600px) {

	:root {
		--video-width: var(--content-width);
	}

	#origins-video-right {	
		display: none;
	}
	#origins-video-bottom {
		display: block;
	}
}

/* tiny screens, 450px wide or less */ 
@media screen and (max-width: 450px) {

	/* don't display every second <br> */
	dl .cell dd br:nth-child(odd) {
		display: none;
	}
}

